# midona-collector

./: .env.example  .gitignore  Pipfile  README.md  main.py  music.py  pyproject.toml
collectors/: flood.py  music.py
src/: healthchecks.py  main.py
src/collectors/: backup.py  flood.py  music.py  qbittorrent.py  scaleway.py  yggtorrent.py
